

syntax = "proto3";
package login;

service Login {
    rpc SendLogin (LoginRequest) returns (LoginResponse);
}

message LoginRequest {
    string from_addr = 1;
    string to_addr   = 2;
    uint32 amount   = 3;
}

message LoginResponse {
    bool   successful = 1;
    string message    = 2;
}
